Updated with logo and house style

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: OBUX
 author: OBUX
 email: info@obux.it
 description: >-
-  Embark on a journey with us as we redefine the landscape of user experience.
+  Embark on a journey with us as we redefine the landscape of user experience, as an open-source community-driven platform.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # your site's origin, e.g. https://forestry.io
 
